Bug 390620 - Editing an Identity while New Message window is open causes the Signature to be updated in the New Message window
Summary: Editing an Identity while New Message window is open causes the Signature to ...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: config dialog (other bugs)
Version First Reported In: 5.7.2
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-17 18:11 UTC by whatifgodwasoneofus
Modified: 2018-02-18 16:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description whatifgodwasoneofus 2018-02-17 18:11:25 UTC
When editing an identity in the "Manage Identities" dialog, the signature bound to that identity is inserted into the New Message window; a signature previously put in the message is replaced.

The action of editing an identity should be UNRELATED to the content of a message being edited - at least when the "source" identity of that message is different from the one being edited!

This only happens when the user has the new message window open and then accesses the Manage Identities dialog.

Steps to reproduce:
1. Create at least two identities (otherwise you cannot see the effect), each one with a different signature, say: 
   - "This is sent from Identity_1", and 
   - "This is sent from Identity_2".
2. Create a new message - it will be sent from, say, Identity_1 and the signature will show "This is sent from Identity_1". 
   Also, make sure you show the "Identity" field in the message header (View/Identity), for a check (5).
3. Go to Settings/Configure KMail/Identities and edit ("Modify") Identity_2.
4. Click on OK (don't need to actually modify anything, just click on OK).
5. The signature in the message window is now "This is sent from Identity_2". 
   NOTE: if the "Identity" field in the New Message window is displayed, you can see that it stays set to "Identity_1".

The signature change happens as if you have changed the identity by operating the "Identity" field in the New Message window.

This effect does NOT seem to affect the message window created to reply to or forward a message.
Comment 1 Laurent Montel 2018-02-17 19:03:06 UTC
I didn't tested it but I will investigate it soon.
Thanks for bug report
Comment 2 Laurent Montel 2018-02-18 10:35:36 UTC
I confirm it :)
Comment 3 Laurent Montel 2018-02-18 15:58:56 UTC
Git commit 4c6890ae43c19576389f8d35e0d27df89bee03a1 by Laurent Montel.
Committed on 18/02/2018 at 15:58.
Pushed by mlaurent into branch 'Applications/17.12'.

Fix Bug 390620 Editing an Identity while New Message window is open causes the Signature to be updated in the New Message window

FIXED-IN: 5.7.3

M  +3    -1    src/editor/kmcomposerwin.cpp

https://commits.kde.org/kmail/4c6890ae43c19576389f8d35e0d27df89bee03a1
Comment 4 whatifgodwasoneofus 2018-02-18 16:07:18 UTC
Thanks! :-)

(cristiano)