Fix Bug 390620 Editing an Identity while New Message window is open causes the Signature to be updated in the New Message window

FIXED-IN: 5.7.3
BUG: 390620